# example-rust-actix-with-websockets

./: Cargo.toml  Dockerfile  README.md  readme.md
src/: main.rs  server.rs
static/: index.html
